gitops/apps/immich/templates/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-service
  namespace: immich
spec:
  selector:
    app: immich-server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 2283
