gitops/apps/immich/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-server
spec:
  defaultBackend:
    service:
      name: immich-server
      port:
        number: 2283
  # rules:
  #   - host: immich.fell-shilling.ts.net
  #     http:
  #       paths:
  #         - path: /
  #           pathType: ImplementationSpecific
  #           backend:
  #             service:
  #               name: immich-server
  #               port:
  #                 number: 2283

  ## if multiiple ingress types, determine which method we are using
  ingressClassName: tailscale
  tls:
    - hosts:
      - immich
